@@ -49,6 +49,8 @@
     * The concept of completion contexts is now exposed to the user
       (see :h :contexts), allowing for powerful and fine-grained
       completion system customization.
+    * IMPORTANT: 'laststatus' has been replaced with the ‘s’ flag in
+      'guioptions'
     * IMPORTANT: Command script files now use the *.penta file extension.
     * IMPORTANT: Plugins are now loaded from the 'plugins/'
       directory in 'runtimepath' rather than 'plugin/'.
